--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-[#0B1215] text-neutral-100">
+	<body class="bg-background fill-text text-text selection:bg-primary selection:text-neutral-900">
 		<slot />
 	</body>
 </html>
