--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '../base.css';
 import '@fontsource/inter';
+import Navbar from '../components/svelte/Navbar.svelte';
 interface Props {
 	title: string;
 }
@@ -19,6 +20,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="bg-background fill-text text-text selection:bg-primary selection:text-neutral-900">
+		<Navbar client:only="svelte" />
 		<slot />
 	</body>
 </html>
