--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/svelte/Navbar.svelte';
 import MembroCTA from '../components/MembroCTA.astro';
 import NawatAreas from '../components/svelte/NawatAreas.svelte';
 ---
 
 <Layout title="Nawat Games">
 	<main>
-		<Navbar client:only="svelte" />
 		<div class="mx-auto max-w-5xl py-32">
 			<h1 class="text-6xl font-bold">Apaixonados pela<br />criação de jogos</h1>
 			<p class="mt-5 max-w-lg text-text/70">
-				Somos o núcleo de desenvolvimento de jogos do IMT. Unidos pela vontade de produzir...
+				Somos o núcleo de desenvolvimento de jogos do Instituto Mauá de Tecnologia. Unidos pela
+				vontade de produzir...
 			</p>
 			<div class="mt-10 flex space-x-4">
 				<button class="bg-secondary px-7 py-3.5 text-text">Nossos Jogos</button>
