--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import NawatAreas from '../components/svelte/NawatAreas.svelte';
 
 <Layout title="Nawat Games">
 	<main>
-		<div class="mx-auto max-w-5xl py-32">
+		<div class="mx-auto max-w-5xl pb-32 pt-48">
 			<h1 class="text-6xl font-bold">Apaixonados pela<br />criação de jogos</h1>
 			<p class="mt-5 max-w-lg text-text/70">
 				Somos o núcleo de desenvolvimento de jogos do Instituto Mauá de Tecnologia. Unidos pela
