--- a/src/pages/jogos/jogo.astro
+++ b/src/pages/jogos/jogo.astro
@@ -8,5 +8,5 @@ import jogo from '../../../public/images/jogos/jogo.png';
 	title="Devil's Revenge"
 	description='O rei demônio, cansado de ser caçado por "heróis", pega seu machado e entra em ação em um bullet-hell com mecânicas inovadoras, oferecendo uma experiência única e desafiadora.'
 >
-	<Image class="absolute inset-0 h-full w-full object-cover" src={jogo} alt="Jogo" slot="image" />
+	<Image class="absolute inset-0 size-full object-cover" src={jogo} alt="Jogo" slot="image" />
 </GamePage>
