--- a/src/pages/seja-membro.astro
+++ b/src/pages/seja-membro.astro
@@ -5,12 +5,99 @@ import Footer from '../components/Footer.astro';
 
 <Layout title="Processos seletivos | Nawat Games">
 	<main>
-		<div class="mx-auto max-w-5xl pt-16">
-			<div class="py-20 text-center">
-				<span class="text-sm">FAÇA PARTE DO TIME</span>
-				<h1 class="text-3xl font-semibold">Confira nossos processos seletivos!</h1>
+		<div class="pt-16">
+			<div class="mx-auto max-w-3xl py-20 text-center">
+				<span class="text-sm font-light text-primary">VENHA FAZER PARTE DA NAWAT GAMES</span>
+				<h1 class="mt-4 text-4xl font-extrabold">Nossos processos seletivos</h1>
+				<p class="mt-4 text-text/70">
+					Quer se juntar a um time apaixonado por criar jogos? Participe de nossos processos
+					seletivos e tenha a chance de aprender, se desenvolver e colaborar em projetos incríveis.
+				</p>
 			</div>
-			<div class="grid grid-cols-2 py-24"></div>
+			<div
+				class="mx-auto grid max-w-4xl grid-cols-2 place-items-center gap-y-16 pb-32 pt-8 *:relative *:h-48 *:w-96 *:overflow-hidden *:rounded-xl"
+			>
+				<div class="bg-green-500">
+					<div
+						class="absolute bottom-0 flex h-16 w-full items-center justify-between bg-black/80 px-5"
+					>
+						<p class="text-lg font-extrabold">Game Programming</p>
+						<div>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="currentColor"
+								class="size-7"
+							>
+								<path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5"
+								></path>
+							</svg>
+						</div>
+					</div>
+				</div>
+				<div class="bg-rose-500">
+					<div
+						class="absolute bottom-0 flex h-16 w-full items-center justify-between bg-black/80 px-5"
+					>
+						<p class="text-lg font-extrabold">Game Art</p>
+						<div>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="currentColor"
+								class="size-7"
+							>
+								<path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5"
+								></path>
+							</svg>
+						</div>
+					</div>
+				</div>
+				<div class="bg-orange-500">
+					<div
+						class="absolute bottom-0 flex h-16 w-full items-center justify-between bg-black/80 px-5"
+					>
+						<p class="text-lg font-extrabold">Game Sound</p>
+						<div>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="currentColor"
+								class="size-7"
+							>
+								<path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5"
+								></path>
+							</svg>
+						</div>
+					</div>
+				</div>
+				<div class="bg-fuchsia-500">
+					<div
+						class="absolute bottom-0 flex h-16 w-full items-center justify-between bg-black/80 px-5"
+					>
+						<p class="text-lg font-extrabold">Design Visual</p>
+						<div>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="currentColor"
+								class="size-7"
+							>
+								<path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5"
+								></path>
+							</svg>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<Footer />
 	</main>
