Atualizações e remoção do Lucia

--- a/src/components/MembroCTA.astro
+++ b/src/components/MembroCTA.astro
@@ -2,14 +2,14 @@
 import Footer from './Footer.astro';
 ---
 
-<div class="from-primary to-accent bg-gradient-to-b">
+<div class="bg-gradient-to-b from-primary to-accent">
 	<div class="py-32 text-center">
-		<h1 class="text-5xl font-bold">Torne-se membro<br />da Nawat Games</h1>
+		<h1 class="text-5xl font-extrabold">Torne-se membro<br />da Nawat Games</h1>
 		<p class="mx-auto mt-4 max-w-lg">
 			Procuramos pessoas talentosas e engajadas com o universo dos jogos — venha fazer parte dessa
 			comunidade apaixonada!
 		</p>
-		<button class="bg-secondary text-text mt-10 px-7 py-3.5">Torne-se um Membro</button>
+		<button class="mt-10 bg-secondary px-7 py-3.5 text-text">Torne-se um Membro</button>
 	</div>
 	<Footer />
 </div>
