--- a/src/pages/jogos.astro
+++ b/src/pages/jogos.astro
@@ -1,3 +1,39 @@
 ---
-
+import Layout from '../layouts/Layout.astro';
+import MembroCTA from '../components/MembroCTA.astro';
+import { Image } from 'astro:assets';
+import jogo from 'public/images/jogos/jogo.png';
+import jogo from '../../public/images/jogos/jogo.png';
 ---
+
+<Layout title="Nossos Jogos | Nawat Games">
+	<main>
+		<div class="mx-auto max-w-xl pb-24 pt-32 text-center">
+			<span class="text-sm font-light uppercase text-accent">Descubra os mundos que criamos!</span>
+			<h1 class="mt-2 text-4xl font-extrabold">Nossos Jogos</h1>
+			<p class="mt-4 text-text/70">
+				Explore os jogos desenvolvidos pela Nawat Games e mergulhe em experiências únicas, pensadas
+				e criadas por nossos talentosos membros.
+			</p>
+		</div>
+		<div
+			class="mx-auto grid max-w-5xl grid-cols-2 gap-20 pb-32 text-center text-xl font-extrabold *:relative *:h-64 *:w-full *:overflow-hidden *:rounded-xl"
+		>
+			<a href="/jogos/jogo">
+				<Image class="size-full object-cover" src={jogo} alt="Jogo" />
+				<div class="absolute bottom-0 flex h-16 w-full items-center justify-center bg-black/80">
+					<span class="">Devil's Revenge</span>
+				</div>
+			</a>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+		<MembroCTA />
+	</main>
+</Layout>
