--- a/src/pages/jogos/jogo.astro
+++ b/src/pages/jogos/jogo.astro
@@ -1,7 +1,7 @@
 ---
 import GamePage from '../../layouts/GamePage.astro';
 import { Image } from 'astro:assets';
-import jogo from '/images/jogos/jogo.png';
+import jogo from '../../../public/images/jogos/jogo.png';
 ---
 
 <GamePage
